--- a/dock-python/docker-compose.yml
+++ b/dock-python/docker-compose.yml
@@ -18,8 +18,13 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD:   password123
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER:  user
+      POSTGRES_PASSWORD:  password123
+      POSTGRES_DB:  mydatabase
     ports:
       - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgres/data
+
+volumes:
+  db_data:
