--- a/dock-python/docker-compose.yml
+++ b/dock-python/docker-compose.yml
@@ -6,15 +6,14 @@ services:
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
 
-
   app:
-    image: python:latest
-    working_dir: /app
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
     volumes:
       - ./python:/app
-    command: ["python", "-m", "http.server"]
     expose:
-      - "8000:80"
+      - "5000:5000"
 
   postgres:
     image: postgres:latest
