--- a/dock-python/docker/app/Dockerfile
+++ b/dock-python/docker/app/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.13-alpine
+
 WORKDIR /app
+
+# Copy and install all pip requirements
 COPY assets/requirements.txt .
-RUN pip install -r requirements.txt
-CMD ["python", "app.py"]
+RUN pip install --no-cache-dir -r requirements.txt
+
+ENV FLASK_ENV="docker"
+
+EXPOSE 5000
+
 
