--- a/djangonauki/Dockerfile
+++ b/djangonauki/Dockerfile
@@ -1,53 +1,20 @@
-FROM python:3.13-slim AS builder
+FROM python:3.13-slim
 
-# Create the app directory
-RUN mkdir /app
+# Ustawienia środowiskowe - brak .pyc, natychmiastowe logi
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
-# Set the working directory
 WORKDIR /app
 
-#Ustawienia środowiskowe (wyłączenie plików .pyc, logi na STDOUT)
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
-
-# Instalacja zależności
+# Skopiuj requirements i zainstaluj zależności
 COPY requirements.txt .
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Kopiowanie całego projektu
-COPY requirements.txt /app/
+# Skopiuj cały kod projektu
+COPY . .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Stage 2: Production stage
-FROM python:3.13-slim
-
-RUN useradd -m -r appuser && \
-   mkdir /app && \
-   chown -R appuser /app
-
-# Copy the Python dependencies from the builder stage
-COPY --from=builder /usr/local/lib/python3.13/site-packages/ /usr/local/lib/python3.13/site-packages/
-COPY --from=builder /usr/local/bin/ /usr/local/bin/
-
-# Set the working directory
-WORKDIR /app
-
-# Copy application code
-COPY --chown=appuser:appuser . .
-
-# Set environment variables to optimize Python
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Switch to non-root user
-USER appuser
-
-# Wystawienie portu (ten sam, którego użyje runserver lub Gunicorn)
 EXPOSE 8000
 
-# Domyślne polecenie – dev-server Django
-# Do produkcji zastąp poniższe dwie linie Gunicornem
+# Domyślne polecenie - w produkcji użyj gunicorn!
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
