--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /.idea
-/djangonauki/src/pajzer/
+#/djangonauki/src/pajzer/
+Python dla każdego. Podstawy programowania. Wydanie III (2014 Helion) - Michael Dawson.pdf
